tests/baselines/reference/anonymousModules.errors.txt
tests/cases/compiler/anonymousModules.ts(1,1): error TS2304: Cannot find name 'module'.
tests/cases/compiler/anonymousModules.ts(1,8): error TS1005: ';' expected.
tests/cases/compiler/anonymousModules.ts(4,2): error TS2304: Cannot find name 'module'.
tests/cases/compiler/anonymousModules.ts(4,9): error TS1005: ';' expected.
tests/cases/compiler/anonymousModules.ts(10,2): error TS2304: Cannot find name 'module'.
tests/cases/compiler/anonymousModules.ts(10,9): error TS1005: ';' expected.


==== tests/cases/compiler/anonymousModules.ts (6 errors) ====
    module {
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
           ~
!!! error TS1005: ';' expected.
    	export var foo = 1;
    
    	module {
    	~~~~~~
!!! error TS2304: Cannot find name 'module'.
    	       ~
!!! error TS1005: ';' expected.
    		export var bar = 1;
    	}
    
    	var bar = 2;
    
    	module {
    	~~~~~~
!!! error TS2304: Cannot find name 'module'.
    	       ~
!!! error TS1005: ';' expected.
    		var x = bar;
    	}
    }